samples/_failures_safe/1761624167_0d793e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9a408cd.c: In function ‘main’:
./samples/SAFE/__tmp_a9a408cd.c:169:1: error: expected declaration or statement at end of input
  169 | int main(void) {
      | ^~~
